app/cruming-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cruming-web
  namespace: cruming-web
  labels:
    app: cruming-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cruming-web
  template:
    metadata:
      labels:
        app: cruming-web
    spec:
      containers:
        - name: cruming-web
          image: minyubo/cruming-web:6
          ports:
            - containerPort: 80
