app/cruming-web/service.yaml
# app/cruming-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cruming-web-service
  namespace: cruming-web
spec:
  selector:
    app: cruming-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
